--- a/result/2022-01-02.md
+++ b/result/2022-01-02.md
@@ -37,3 +37,4 @@
 37. [冰球运动员赢得比赛后听到国歌落泪了](https://s.weibo.com//weibo?q=%23%E5%86%B0%E7%90%83%E8%BF%90%E5%8A%A8%E5%91%98%E8%B5%A2%E5%BE%97%E6%AF%94%E8%B5%9B%E5%90%8E%E5%90%AC%E5%88%B0%E5%9B%BD%E6%AD%8C%E8%90%BD%E6%B3%AA%E4%BA%86%23&Refer=top) 103026
 38. [郭艾伦22分](https://s.weibo.com//weibo?q=%23%E9%83%AD%E8%89%BE%E4%BC%A622%E5%88%86%23&Refer=top) 102798
 39. [小姐姐带你看爆笑跨年舞台](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E5%A7%90%E5%A7%90%E5%B8%A6%E4%BD%A0%E7%9C%8B%E7%88%86%E7%AC%91%E8%B7%A8%E5%B9%B4%E8%88%9E%E5%8F%B0%23&Refer=top) 102623
+40. [西安新增174例确诊病例均为轻型](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%96%B0%E5%A2%9E174%E4%BE%8B%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%E5%9D%87%E4%B8%BA%E8%BD%BB%E5%9E%8B%23&Refer=top) 70982
