--- a/result/2022-01-02.md
+++ b/result/2022-01-02.md
@@ -40,4 +40,5 @@
 40. [西安新增174例确诊病例均为轻型](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%96%B0%E5%A2%9E174%E4%BE%8B%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%E5%9D%87%E4%B8%BA%E8%BD%BB%E5%9E%8B%23&Refer=top) 70982
 41. [翟志刚王亚平叶光富对话京港澳学子](https://s.weibo.com//weibo?q=%23%E7%BF%9F%E5%BF%97%E5%88%9A%E7%8E%8B%E4%BA%9A%E5%B9%B3%E5%8F%B6%E5%85%89%E5%AF%8C%E5%AF%B9%E8%AF%9D%E4%BA%AC%E6%B8%AF%E6%BE%B3%E5%AD%A6%E5%AD%90%23&Refer=top) 46552
 42. [用2022写出新年心愿](https://s.weibo.com//weibo?q=%23%E7%94%A82022%E5%86%99%E5%87%BA%E6%96%B0%E5%B9%B4%E5%BF%83%E6%84%BF%23&Refer=top) 33256
-43. [新年伊始国歌响彻喀喇昆仑山谷](https://s.weibo.com//weibo?q=%23%E6%96%B0%E5%B9%B4%E4%BC%8A%E5%A7%8B%E5%9B%BD%E6%AD%8C%E5%93%8D%E5%BD%BB%E5%96%80%E5%96%87%E6%98%86%E4%BB%91%E5%B1%B1%E8%B0%B7%23&Refer=top) 22194
+43. [成都有条500公里长的绿道](https://s.weibo.com//weibo?q=%23%E6%88%90%E9%83%BD%E6%9C%89%E6%9D%A1500%E5%85%AC%E9%87%8C%E9%95%BF%E7%9A%84%E7%BB%BF%E9%81%93%23&Refer=top) 25627
+44. [新年伊始国歌响彻喀喇昆仑山谷](https://s.weibo.com//weibo?q=%23%E6%96%B0%E5%B9%B4%E4%BC%8A%E5%A7%8B%E5%9B%BD%E6%AD%8C%E5%93%8D%E5%BD%BB%E5%96%80%E5%96%87%E6%98%86%E4%BB%91%E5%B1%B1%E8%B0%B7%23&Refer=top) 22194
